[package]
name = "auto-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.17"
config = "0.13.3"
confique = "0.2.4"
dbus = "0.9.7"
dialoguer = "0.10.4"
dirs = "5.0.1"
home = "0.5.5"
inquire = "0.6.2"
regex = "1.9.1"
serde = { version = "1.0.175", features = ["derive"]}
serde_yaml = "0.9.25"
url = "2.4.0"
wifi = "0.1.0"
yaml = "0.3.0"
